--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "hydration": "^0.5.0",
     "idgen": "^2.0.2",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "redis": "^0.10.3"
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "mocha": "*",
-    "redis": "^0.10.3"
+    "mocha": "*"
   },
   "scripts": {
     "test": "make test"
