--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "hydration": "^0.5.0",
     "idgen": "^2.0.2",
     "lodash": "^2.4.1",
-    "redis": "^0.10.3"
+    "redis": "^0.10.3",
+    "trycatch": "^1.5.11"
   },
   "devDependencies": {
     "async": "^0.9.0",
